-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-10-04T11:33:04.039Z

CREATE TYPE "status" AS ENUM (
  'active',
  'deleted',
  'suspended'
);

CREATE TYPE "visibility" AS ENUM (
  'public',
  'private'
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "firebase_id" varchar UNIQUE NOT NULL,
  "email" varchar(255) UNIQUE NOT NULL,
  "display_name" varchar(120) NOT NULL,
  "username" varchar(50) UNIQUE NOT NULL,
  "avatar_url" varchar(512),
  "bio" text,
  "preferences_genres" integer[] DEFAULT '{}',
  "status" status DEFAULT 'active',
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "user_favorites" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "user_id" integer NOT NULL,
  "movie_id" integer NOT NULL,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "reviews" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "user_id" integer NOT NULL,
  "movie_id" integer NOT NULL,
  "rating" float NOT NULL,
  "body" text,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "lists" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "user_id" integer NOT NULL,
  "name" varchar(100) NOT NULL,
  "description" text,
  "visibility" visibility DEFAULT 'private',
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "list_items" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "list_id" integer NOT NULL,
  "movie_id" integer NOT NULL,
  "position" integer NOT NULL,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "genres" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "name" varchar(100) UNIQUE NOT NULL
);

CREATE TABLE "movies" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "tmdb_id" integer UNIQUE NOT NULL,
  "title" varchar(255) NOT NULL,
  "overview" text,
  "release_date" date,
  "runtime" float,
  "poster_url" varchar,
  "genre_ids" integer[],
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE UNIQUE INDEX ON "user_favorites" ("user_id", "movie_id");

CREATE UNIQUE INDEX ON "reviews" ("user_id", "movie_id");

CREATE UNIQUE INDEX ON "list_items" ("list_id", "movie_id");

ALTER TABLE "user_favorites" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_favorites" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "reviews" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "reviews" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "lists" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "list_items" ADD FOREIGN KEY ("list_id") REFERENCES "lists" ("id");

ALTER TABLE "list_items" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");
